apollo-router/src/services/router/snapshots/apollo_router__services__router__tests__invalid_input_object_unknown_field@strict_variable_validation_enforce.snap
---
source: apollo-router/src/services/router/tests.rs
expression: response
---
{
  "errors": [
    {
      "message": "unknown field input value at `$input.invalidField` found for GraphQL type `RegisterPartnerInput!`",
      "extensions": {
        "name": "input",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
